--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@headlessui/react": "^1.4.1",
     "@heroicons/react": "^1.0.4",
     "@tailwindcss/forms": "^0.3.4",
     "faker": "^5.5.3",
@@ -14,6 +15,8 @@
     "next-auth": "4.0.0-beta.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-moment": "^1.1.1",
+    "recoil": "^0.4.1",
     "tailwind-scrollbar-hide": "^1.0.3"
   },
   "devDependencies": {
